# robotics_optimization_benchmarks

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: constraints.txt  docs.yml  tests.yml
docs/: benchmarks.md  conf.py  experiments.md  index.md  optimizers.md  reference.md  requirements.txt  usage.md
docs/benchmarks/: ballistic.md  brax.md  double_well.md  nl_opt.md  quadratic.md
docs/experiments/: experiment_runner.md  experiment_suite.md  experiment_suite_factory.md  loggers.md  visualization.md
docs/optimizers/: bgd.md  gd.md  mcmc.md  optax.md  vpg.md
scripts/: run_ballistic.py  run_double_well.py  run_hf_quadratic.py  run_pong.py  run_quadratic.py
scripts/ballistic_10/: param_sweep.py
scripts/reacher/: param_sweep.py
src/robotics_optimization_benchmarks/: __init__.py  __main__.py  experiment_runner.py  experiment_suite.py  experiment_suite_factory.py  registry.py  types.py
src/robotics_optimization_benchmarks/benchmarks/: __init__.py  benchmark.py  registry.py
src/robotics_optimization_benchmarks/benchmarks/ballistic/: __init__.py  ballistic.py
src/robotics_optimization_benchmarks/benchmarks/brax/: __init__.py  brax.py
src/robotics_optimization_benchmarks/experiments/: __init__.py  experiment_runner.py  experiment_suite.py  experiment_suite_factory.py  visualization.py
src/robotics_optimization_benchmarks/optimizers/: __init__.py  optimizer.py  registry.py
src/sampling_benchmarks/: __init__.py  __main__.py
tests/: __init__.py  test_experiment_suite_factory.py  test_main.py  test_registry.py
tests/benchmarks/: __init__.py  test_ackley.py  test_ballistic.py  test_benchmark_registry.py  test_brax.py  test_double_well.py  test_heaviside.py  test_hf_quadratic.py  test_himmelblau.py  test_pong.py  test_quadratic.py  test_reacher.py  test_rosenbrock.py  test_styblinski_tang.py  test_three_hump_camel.py
tests/experiments/: test_experiment_suite_factory.py  test_visualization.py
tests/experiments/loggers/: test_file_logger.py  test_wandb_logger.py
tests/experiments/test_data/: experiment_suite.json
tests/optimizers/: __init__.py  test_all_optimizers.py  test_mcmc.py  test_optax.py  test_optimizer_registry.py
(+200 files in other folders)
