[tool.poetry]
name = "robotics_optimization_benchmarks"
version = "0.0.0"
description = "robotics_optimization_Benchmarks"
authors = ["Charles Dawson <cbd@mit.edu>"]
license = "BSD 3-clause"
readme = "README.md"
homepage = "https://github.com/dawsonc/robotics_optimization_benchmarks"
repository = "https://github.com/dawsonc/robotics_optimization_benchmarks"
documentation = "https://robotics_optimization_benchmarks.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/dawsonc/robotics_optimization_benchmarks/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"
beartype = ">=0.12.0"
jax = ">=0.4.3"
jaxlib = ">=0.4.3"
jaxtyping = ">=0.2.11"
matplotlib = ">=3.7.0"
# brax = ">=0.1.1"  # FIXME: once brax release doesn't break on scan
brax = { git = "https://github.com/google/brax.git", branch = "main" }
equinox = ">=0.9.2"
chex = ">=0.1.6"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
matplotlib = ">=3.7.0"
mypy = ">=1.0.0"
myst-parser = {version = ">=0.16.1"}
nox = ">=2022.11.21"
nox-poetry = ">=1.0.2"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pylint = ">=2.15.10"
pytest = ">=7.2.1"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.scripts]
robotics_optimization_benchmarks = "robotics_optimization_benchmarks.__main__:main"

[tool.pytest.ini_options]
markers = ["slow"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["robotics_optimization_benchmarks", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
